# browser_agent

./: .env.example  .gitignore  CLAUDE.md  prd.md  pyproject.toml
.claude/skills/ralph/: CLAUDE.md  prd.json
scripts/: CLAUDE.md  demo.py  eval.py  run.py
scripts/ralph/: .last-branch  CLAUDE.md  README.md  prd.json  progress.txt  ralph-zai.sh  ralph.sh
scripts/ralph/archive/2026-01-27-autonomous-browser-ai-agent/: prd.json  progress.txt
src/browser_agent/: CLAUDE.md  __init__.py  cli.py
src/browser_agent/agents/: CLAUDE.md  __init__.py  navigator.py  planner.py  safety.py
src/browser_agent/core/: CLAUDE.md  __init__.py  browser.py  context.py  llm.py  logging.py  recovery.py  registry.py
src/browser_agent/models/: CLAUDE.md  __init__.py  action.py  element.py  result.py  snapshot.py
src/browser_agent/security/: __init__.py
src/browser_agent/tools/: CLAUDE.md  __init__.py  browser_tools.py  hybrid_observe.py  observe.py  safety.py  screenshot.py
src/browser_agent/tools/actions/: CLAUDE.md  __init__.py  click.py  done.py  extract.py  navigate.py  press.py  (+3 more)
tasks/: fix-memory-leaks.md  prd-autonomous-browser-ai-agent.md  prd-react-agent-sdk-rewrite.md
tests/: CLAUDE.md  conftest.py
tests/core/: CLAUDE.md  test_context.py  test_registry.py
tests/integration/: CLAUDE.md  __init__.py  test_agents.py  test_safety.py
tests/models/: __init__.py  test_action.py  test_element.py  test_result.py  test_snapshot.py
tests/tools/: CLAUDE.md  test_actions.py  test_browser_tools.py  test_hybrid_observe.py  test_observe.py  test_safety.py  test_screenshot.py
